--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,11 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "/api/*": {
+      "target": "http://localhost:5000/"
+    }
+  },
   "dependencies": {
     "moment": "^2.22.2",
     "react": "^16.4.1",
