--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-addons-shallow-compare": "15.6.0",
